2024-02-21T00:39:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7982123726 # 135
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 305 1064 / 309 1076
* notice: next accum: outdated-unq outdated-all / unq all: 308 1074 / 310 1079
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2024-02-06 2024-02-07] / [2024-02-20]

2024-02-18T08:10:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7947625232 # 127
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 305 1064 / 308 1074
* notice: next accum: outdated-unq outdated-all / unq all: 305 1064 / 309 1076
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-18]

2024-02-13T08:11:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7883491146 # 112
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-13
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 304 1062 / 308 1074
* notice: next accum: outdated-unq outdated-all / unq all: 305 1064 / 308 1074
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-30] / []

2024-02-12T16:10:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7874587023 # 110