@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-21T00:39:15Z",
+  "timestamp" : "2024-02-21T16:11:03Z",
   "count_outdated" : 1074,
   "uniques_outdated" : 308,
-  "count" : 1079,
-  "uniques" : 310,
+  "count" : 1081,
+  "uniques" : 311,
   "views" : [
     {
       "timestamp": "2024-02-18T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-21T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
