@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 2,
+  "count": 7,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2024-02-18T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2024-02-20T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-21T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
